@@ -1,5 +1,10 @@
 WIP
 -----------------------------
+* Laps and position Widget
+  - Now shows estimated total laps for time-based session (requested by user "Sandriekus"). A "~" sign will be displayed before estimated total laps reading, and up to two decimal places will be kept.
+    Note, estimated total laps reading is calculated based on local player's lap time pace data from Delta Module, which can be different from in-game HUD reading. This reading does not concern about race leader's lap time pace, which means there may be an extra final lap on top of it.
+  - Increased "lap_number" bar width by 3 characters to fit with additional digits and decimals from estimated total laps reading.
+
 * Misc
   - Added new contributor "sepi" to contributors.md in "Community support" section.
 
